test/classes/nilability/coerce-away-nilable.good
coerce-away-nilable.chpl:6: error: cannot assign to non-nilable borrowed MyClass from nilable borrowed MyClass?
