test/classes/nilability/coerce-away-nilable.chpl
class MyClass { var x:int; }

var nilable:MyClass?;
writeln(nilable);

var notNilable:MyClass = nilable;
